--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: d922379cda1b48952be75fb3bd2ac5e7ceecf569492a6088bab77894c624a278
 
 build:
@@ -17,12 +17,11 @@ requirements:
   host:
     - python
     - pip
+    -setuptools
   run:
     - python
-    - applicationinsights >=0.11.1
-    - portalocker ==1.2.1
-    - setuptools
-    - pywin32  # [win]
+    - applicationinsights >=0.11.1,<0.12
+    - portalocker >=1.6,<3
 
 test:
   imports:
@@ -39,7 +38,7 @@ about:
   summary: Microsoft Azure CLI Telemetry Package
 
   doc_url: https://docs.microsoft.com/en-us/cli/azure
-  dev_url: https://github.com/Azure/azure-cli
+  dev_url: https://github.com/Azure/azure-cli/tree/main/src/azure-cli-telemetry
 
 extra:
   recipe-maintainers:
