--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,20 +10,23 @@ source:
   sha256: d922379cda1b48952be75fb3bd2ac5e7ceecf569492a6088bab77894c624a278
 
 build:
+  noarch: python
   number: 0
   script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   host:
-    - python
+    - python {{ python_min }}
     - pip
     - setuptools
   run:
-    - python
+    - python >={{ python_min }}
     - applicationinsights >=0.11.1,<0.12
     - portalocker >=1.6,<3
 
 test:
+  requires:
+    - python {{ python_min }}
   imports:
     - azure
     - azure.cli
